test/all_output.txt
javac output ------------
Test.java:9: incompatible types
found   : java.lang.String
required: int
		int a = "xxx";
		        ^
Test.java:10: incompatible types
found   : int
required: java.lang.String
		String str = 45;
		             ^
Test.java:11: non-static method go() cannot be referenced from a static context
		go();
		^
3 errors

gcc output ------------
test.c: In function ‘main’:
test.c:10: error: request for member ‘x’ in something not a structure or union
test.c:11: warning: initialization makes integer from pointer without a cast

python output -------------

Traceback (most recent call last):
  File "test.py", line 10, in <module>
    err()
  File "test.py", line 7, in err
    real_err()
  File "test.py", line 4, in real_err
    int('xxx')
ValueError: invalid literal for int() with base 10: 'xxx'

valac output ---------------

Test.vala:9.9-9.23: error: Return: Cannot convert from `string' to `int'
        return "error";
        ^^^^^^^^^^^^^^^
Test.vala:13.9-13.9: error: The name `c' does not exist in the context of `Test.HelloObject.main'
        c();
        ^
Test.vala:14.13-14.21: error: Assignment: Cannot convert from `string' to `int'
        int a = "xxx";
            ^^^^^^^^^
Compilation failed: 3 error(s), 0 warning(s)

ruby output ----------------

test.rb:5: undefined method `fake_method' for main:Object (NoMethodError)
	from test.rb:3:in `each'
	from test.rb:3
1 Hello

scala output -------------

Test.scala:5: error: type mismatch;
 found   : java.lang.String("xx")
 required: int
        var a:int = "xx";
                    ^
Test.scala:7: error: not found: value fakeMethod
        fakeMethod()
        ^
two errors found

go 6g output -----------

test.go:7: cannot use "xx" (type string) as type int in assignment
test.go:7: s declared and not used
test.go:9: undefined: FakeMethod

perl output ------------

syntax error at test.pl line 4, near ") {"
syntax error at test.pl line 8, near "$fake_var
}"
Execution of test.pl aborted due to compilation errors.

mcs output ------------

Test.cs(11,11): error CS0029: Cannot implicitly convert type `string' to `int'
Test.cs(12,7): error CS0103: The name `fakeMethod' does not exist in the current context
Compilation failed: 2 error(s), 0 warnings
